syntax = "proto3";

package faltung.house.api.device;

option go_package = "github.com/rmrobinson/house/api/device";

import "api/trait/media_stream.proto";
import "api/trait/presence.proto";

// Camera is a device which is exposes a video stream to the network.
message Camera {
  faltung.house.api.trait.MediaStream media_stream = 1;
  faltung.house.api.trait.Presence presence = 2;
}